feat: timeline content

--- a/src/content/index-page/index.mdx
+++ b/src/content/index-page/index.mdx
@@ -74,42 +74,49 @@ techStack:
     image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg
 
 experienceTitle: Work Experience
-experienceDescription: My professional journey through tech, from open source contributions to leading frontend teams.
+experienceDescription: My professional journey through tech, from building desktop software and ML integrations to architecting cloud solutions and mentoring future developers.
 
 timeline:
   - title: Present
-    description: I am currently managing a multi-faceted career path, balancing enterprise-level frontend engineering with specialized freelance consulting and open-source contributions.
+    description: Currently balancing international software engineering roles with full-stack development and architectural consulting.
     content:
-      - title: Senior Frontend Engineer
-        company: Tech Innovations Inc.
-        date: "2025 - Present"
-        desc: Leading architecture and frontend strategy.
-      - title: Full Stack Freelancer
-        company: Independent
-        date: "2024 - Present"
-        desc: Specialized in Local-First synchronization.
-      - title: Open Source Maintainer
-        company: GitHub
-        date: "2023 - Present"
-        desc: Maintaining high-performance UI libraries.
-  - title: "2024"
-    description: A high-growth period where I balanced agency leadership with specialized FinTech consulting projects from 2021 through 2024.
-    content:
-      - title: Lead Web Developer
-        company: Creative Agency
-        date: "2022 - 2024"
-        desc: Managed a team of 5 developers for high-traffic media sites.
-      - title: UI/UX Consultant
-        company: FinTech Solutions
-        date: "2021 - 2024"
-        desc: Designed systems for global banking dashboards.
-  - title: "Early 2021"
-    content:
-      - title: Junior Developer
-        company: StartupXYZ
-        date: "Jan 2021 - Dec 2022"
-        desc: Foundational years learning full-stack basics and agile development.
+      - title: Software Engineer
+        company: Perseverance Technology Co., Ltd.
+        date: "Jul 2024 - Present"
+        desc: Building desktop software with Python/C++ and integrating ML models into core application features within an Agile environment.
+      - title: Software Developer
+        company: Aranus Technology
+        date: "Jun 2024 - Present"
+        desc: Full-stack web development, database integration, and proactive maintenance of internal systems and high-performance websites.
 
+  - title: "Late 2024"
+    description: A focused period of intensive work in Cloud Architecture and DevOps through specialized internships.
+    content:
+      - title: Solutions Architect (Intern)
+        company: Elitery
+        date: "Dec 2024 - Jan 2025"
+        desc: Designed scalable AWS architectures, optimized for cost/security, and created technical diagrams for architectural decisions.
+      - title: DevOps Engineer (Intern)
+        company: Elitery
+        date: "Nov 2024 - Dec 2024"
+        desc: Managed AWS cloud resources and supported automation of deployment pipelines to improve operational efficiency.
+      - title: Assistant Lecturer (Framework Programming)
+        company: Universitas Bengkulu
+        date: "Aug 2024 - Dec 2024"
+        desc: Mentored students in full-stack Laravel development, MVC architecture, and RESTful API best practices.
+
+  - title: "Mid 2024"
+    description: Establishing professional foundations in Frontend engineering and academic instruction.
+    content:
+      - title: Frontend Engineer (Intern)
+        company: Langgeng Inovasi Teknologi
+        date: "Jun 2024 - Aug 2024"
+        desc: Translated UI/UX wireframes into functional code and participated in professional Agile sprint planning and Git workflows.
+      - title: Assistant Lecturer (Web Programming)
+        company: Universitas Bengkulu
+        date: "Jan 2024 - Jun 2024"
+        desc: Led workshops on HTML/CSS/JS and React.js, focusing on state management and Document Object Model (DOM) fundamentals.
+        
 servicesTitle: Services & Offerings
 servicesDescription: Specialized web development services tailored to bring your ideas to life with modern technologies and best practices.
 
@@ -123,12 +130,6 @@ services:
   - title: Full Stack Solutions
     description: End-to-end development services from database design to polished user interfaces.
     icon: IconDeviceDesktop
-  - title: UI/UX Design
-    description: Crafting intuitive, accessible interfaces with smooth animations and delightful user experiences.
-    icon: IconPalette
-  - title: Performance Optimization
-    description: Boosting website speed, Core Web Vitals, and overall performance for better user engagement.
-    icon: IconSpeedboat
   - title: Code Review & Consulting
     description: Expert code reviews, architecture consulting, and best practices guidance for your projects.
     icon: IconCode
