--- a/src/content/index-page/index.mdx
+++ b/src/content/index-page/index.mdx
@@ -14,8 +14,8 @@ roles:
     description: Building cross-platform apps that feel native using React Native.
   - label: Cloud Computing Enthusiast
     description: Designing scalable cloud architectures and optimizing serverless workflows.
-  - label: DevOps Engineer
-    description: Automating deployments and managing cloud infrastructure with Docker.
+  - label: Machine Learning Enthusiast
+    description: Developing predictive models and integrating AI capabilities into applications.
 
 education:
   - id: 1
@@ -44,34 +44,185 @@ education:
     details: High school foundation with a focus on science and analytical thinking.
 
 techStack:
+  # --- LANGUAGES ---
   - id: 1
-    name: React
-    designation: UI Library
-    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg
+    name: JavaScript
+    designation: Core Scripting
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg
   - id: 2
-    name: Next.js
-    designation: Fullstack Framework
-    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg
-  - id: 3
     name: TypeScript
     designation: Type Safety
     image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg
+  - id: 3
+    name: PHP
+    designation: Server-side
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg
+  - id: 4
+    name: Python
+    designation: ML & Scripting
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg
   - id: 5
-    name: Laravel
-    designation: Backend
-    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg
+    name: Go
+    designation: Systems Engineering
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/go/go-original-wordmark.svg
   - id: 6
-    name: PostgreSQL
-    designation: Database
-    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg
+    name: Kotlin
+    designation: Android Development
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/kotlin/kotlin-original.svg
+
+  # --- FRAMEWORKS ---
   - id: 7
-    name: Docker
-    designation: Deployment
-    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg
+    name: Laravel
+    designation: PHP Framework
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/laravel/laravel-original.svg
   - id: 8
+    name: Next.js
+    designation: Fullstack React
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg
+  - id: 9
+    name: NestJS
+    designation: Node Architecture
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nestjs/nestjs-original.svg
+  - id: 10
+    name: Django
+    designation: Python Framework
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg
+  - id: 11
+    name: Fiber
+    designation: High-perf Go
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/fiber/fiber-original.svg
+  - id: 12
+    name: FastAPI
+    designation: Modern Python API
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/fastapi/fastapi-original.svg
+  - id: 13
+    name: Ruby on Rails
+    designation: Web Framework
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rails/rails-plain-wordmark.svg
+  - id: 14
+    name: Astro
+    designation: Static Site Engine
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/astro/astro-original.svg
+  - id: 15
+    name: Vue.js
+    designation: Frontend Framework
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vuejs/vuejs-original.svg
+  - id: 16
+    name: Flutter
+    designation: Cross-platform UI
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flutter/flutter-original.svg
+  - id: 17
+    name: Express
+    designation: Node Framework
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg
+
+  # --- LIBRARIES & UI ---
+  - id: 18
+    name: React
+    designation: UI Library
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg
+  - id: 19
+    name: Tailwind CSS
+    designation: Styling Engine
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original.svg
+  - id: 20
+    name: PyTorch
+    designation: Deep Learning
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pytorch/pytorch-original.svg
+  - id: 21
+    name: Inertia.js
+    designation: Monolith Bridge
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/inertiajs/inertiajs-original.svg
+  - id: 22
+    name: Framer Motion
+    designation: Animation Library
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/framermotion/framermotion-original.svg
+  - id: 23
+    name: Zustand
+    designation: State Management
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/zustand/zustand-original.svg
+  - id: 24
+    name: Filament
+    designation: Laravel Admin
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/filamentphp/filamentphp-original.svg
+  - id: 25
+    name: GTK
+    designation: GUI Toolkit
+    image: https://www.gtk.org/assets/img/logo-gtk-sm.png
+  - id: 26
+    name: GraphQL
+    designation: Query Language
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/graphql/graphql-plain.svg
+
+  # --- PLATFORMS & RUNTIMES ---
+  - id: 27
     name: Node.js
     designation: Runtime
     image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg
+  - id: 28
+    name: Bun
+    designation: Modern JS Runtime
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bun/bun-original.svg
+  - id: 29
+    name: Android
+    designation: OS Platform
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/android/android-original.svg
+  - id: 30
+    name: Tauri
+    designation: Desktop Apps
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tauri/tauri-original.svg
+  - id: 31
+    name: Expo
+    designation: Mobile Tooling
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/expo/expo-original.svg
+
+  # --- DATABASES & CLOUD ---
+  - id: 32
+    name: PostgreSQL
+    designation: Relational DB
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg
+  - id: 33
+    name: MySQL
+    designation: Relational DB
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg
+  - id: 34
+    name: Redis
+    designation: Caching
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redis/redis-original.svg
+  - id: 35
+    name: MongoDB
+    designation: NoSQL Database
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg
+  - id: 36
+    name: Supabase
+    designation: BaaS Platform
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/supabase/supabase-original.svg
+  - id: 37
+    name: Cloudflare
+    designation: Edge & Security
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cloudflare/cloudflare-original.svg
+
+  # --- TOOLS & COLLABORATION ---
+  - id: 38
+    name: Docker
+    designation: DevOps
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg
+  - id: 39
+    name: Git
+    designation: Version Control
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg
+  - id: 40
+    name: GitHub
+    designation: Collaboration
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg
+  - id: 41
+    name: Figma
+    designation: UI/UX Design
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg
+  - id: 42
+    name: Google Colab
+    designation: Data Science
+    image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/googlecolab/googlecolab-original.svg
 
 experienceTitle: Work Experience
 experienceDescription: My professional journey through tech, from building desktop software and ML integrations to architecting cloud solutions and mentoring future developers.
@@ -116,9 +267,9 @@ timeline:
         company: Universitas Bengkulu
         date: "Jan 2024 - Jun 2024"
         desc: Led workshops on HTML/CSS/JS and React.js, focusing on state management and Document Object Model (DOM) fundamentals.
-        
-servicesTitle: Services & Offerings
-servicesDescription: Specialized web development services tailored to bring your ideas to life with modern technologies and best practices.
+
+servicesTitle: Software Engineering & Solutions
+servicesDescription: Providing end-to-end technical expertise to build scalable, secure, and high-performance digital products.
 
 services:
   - title: Frontend Development
@@ -127,6 +278,12 @@ services:
   - title: Backend Development
     description: Creating robust server-side applications with Node.js, Python, and scalable database architectures.
     icon: IconServer
+  - title: Mobile Development
+    description: Developing cross-platform mobile applications for iOS and Android using React Native and Flutter.
+    icon: IconDeviceMobile
+  - title: Machine Learning
+    description: Implementing intelligent solutions including data analysis, model training, and AI integration for web and desktop.
+    icon: IconBrain
   - title: Full Stack Solutions
     description: End-to-end development services from database design to polished user interfaces.
     icon: IconDeviceDesktop
