feat: load identity from mdx

--- a/src/content/index-page/index.mdx
+++ b/src/content/index-page/index.mdx
@@ -224,6 +224,60 @@ techStack:
     designation: Data Science
     image: https://cdn.jsdelivr.net/gh/devicons/devicon/icons/googlecolab/googlecolab-original.svg
 
+location:
+  label: Indonesia, Bengkulu
+  country: Indonesia
+  city: Bengkulu
+  mapEmbedUrl: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127357.5438865668!2d102.22124536214532!3d-3.8185611422774945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e36b01f37e19039%3A0x3039d80b220cc40!2sBengkulu%2C%20Bengkulu%20City%2C%20Bengkulu!5e0!3m2!1sen!2sid!4v1715848200000!5m2!1sen!2sid
+
+connect:
+  - id: 1
+    name: GitHub
+    designation: Open Source
+    icon: IconBrandGithub
+  - id: 2
+    name: LinkedIn
+    designation: Professional
+    icon: IconBrandLinkedin
+  - id: 3
+    name: Twitter
+    designation: Updates
+    icon: IconBrandTwitter
+
+interests:
+  - id: 1
+    label: Cloud Tech
+    color: text-blue-500
+    icon: IconCloud
+  - id: 2
+    label: Open Source
+    color: text-purple-500
+    icon: IconDeviceDesktop
+  - id: 3
+    label: Coffee
+    color: text-amber-600
+    icon: IconCoffee
+  - id: 4
+    label: Photography
+    color: text-pink-500
+    icon: IconCamera
+  - id: 5
+    label: Gaming
+    color: text-emerald-500
+    icon: IconDeviceGamepad2
+  - id: 6
+    label: Writing
+    color: text-sky-500
+    icon: IconSignature
+  - id: 7
+    label: Travel
+    color: text-orange-500
+    icon: IconMapPin
+  - id: 8
+    label: Music
+    color: text-rose-500
+    icon: IconActivity
+
 experienceTitle: Work Experience
 experienceDescription: My professional journey through tech, from building desktop software and ML integrations to architecting cloud solutions and mentoring future developers.
 
