--- a/src/content/index-page/index.mdx
+++ b/src/content/index-page/index.mdx
@@ -228,21 +228,23 @@ location:
   label: Indonesia, Bengkulu
   country: Indonesia
   city: Bengkulu
-  mapEmbedUrl: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127357.5438865668!2d102.22124536214532!3d-3.8185611422774945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e36b01f37e19039%3A0x3039d80b220cc40!2sBengkulu%2C%20Bengkulu%20City%2C%20Bengkulu!5e0!3m2!1sen!2sid!4v1715848200000!5m2!1sen!2sid
-
+  mapEmbedUrl: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127357.54582046892!2d102.22728989531553!3d-3.818921124619567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e36b0204739506b%3A0x401e8f1fc28c110!2sBengkulu%2C%20Bengkulu%20City%2C%20Bengkulu!5e0!3m2!1sen!2sid!4v1710000000000!5m2!1sen!2sid
 connect:
   - id: 1
     name: GitHub
     designation: Open Source
     icon: IconBrandGithub
+    url: https://github.com/anjasfedo
   - id: 2
     name: LinkedIn
     designation: Professional
     icon: IconBrandLinkedin
+    url: https://linkedin.com/in/anjasfedo
   - id: 3
     name: Twitter
     designation: Updates
     icon: IconBrandTwitter
+    url: https://twitter.com/anjasfedo
 
 interests:
   - id: 1
