feat: proper contact information

--- a/src/content/index-page/index.mdx
+++ b/src/content/index-page/index.mdx
@@ -229,6 +229,7 @@ location:
   country: Indonesia
   city: Bengkulu
   mapEmbedUrl: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127357.54582046892!2d102.22728989531553!3d-3.818921124619567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e36b0204739506b%3A0x401e8f1fc28c110!2sBengkulu%2C%20Bengkulu%20City%2C%20Bengkulu!5e0!3m2!1sen!2sid!4v1710000000000!5m2!1sen!2sid
+
 connect:
   - id: 1
     name: GitHub
@@ -239,12 +240,17 @@ connect:
     name: LinkedIn
     designation: Professional
     icon: IconBrandLinkedin
-    url: https://linkedin.com/in/anjasfedo
+    url: https://linkedin.com/in/m-anjasfedo-afridiansah
   - id: 3
-    name: Twitter
-    designation: Updates
-    icon: IconBrandTwitter
-    url: https://twitter.com/anjasfedo
+    name: Instagram
+    designation: Personal & Creative
+    icon: IconBrandInstagram
+    url: https://www.instagram.com/anjas_fedo/
+  - id: 4
+    name: Gmail
+    designation: Direct Inquiry
+    icon: IconMail
+    url: mailto:fedoafridiansah@gmail.com
 
 interests:
   - id: 1
