--- a/src/content/privacy-page/index.mdx
+++ b/src/content/privacy-page/index.mdx
@@ -30,5 +30,5 @@ sections:
 
   - title: Contact & Questions
     badge: Contact
-    content: <div class="text-center space-y-4"><p>If you have any questions, concerns, or requests regarding this privacy policy or your personal information, please don't hesitate to contact me.</p><a href="mailto:hello@example.com" class="inline-flex items-center gap-2 px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-lg transition-colors"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" /></svg>Contact Me</a></div>
+    content: <div class="text-center space-y-4"><p>If you have any questions, concerns, or requests regarding this privacy policy or your personal information, please don't hesitate to contact me.</p><a href="mailto:fedoafridiansah@gmail.com" class="inline-flex items-center gap-2 px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-lg transition-colors"><svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" /></svg>Contact Me</a></div>
 ---
