feat: complete index lang

--- a/src/content/index-page/en/index.mdx
+++ b/src/content/index-page/en/index.mdx
@@ -2,6 +2,9 @@
 title: Index Page Content
 order: 1
 headline: Hi, I'm Anjasfedo. I craft digital experiences that merge design with technology.
+heroSubtitle: I specialize in
+viewMyWorkText: View My Work
+getInTouchText: Get In Touch
 
 roles:
   - label: Full-Stack Developer
@@ -42,6 +45,18 @@ education:
     year: 2018 - 2021
     logo: https://api.dicebear.com/7.x/identicon/svg?seed=SMAN1
     details: High school foundation with a focus on science and analytical thinking.
+
+identityGridTitle: Identity & Expertise
+techStackTitle: The Tech Stack
+techStackDescription: Technologies I use to build scalable products.
+locationTitle: Location
+locationDescription: Indonesia, Bengkulu.
+connectTitle: Connect
+connectDescription: Let's build something together.
+educationTitle: Education
+educationDescription: My academic journey.
+interestsTitle: Interests
+interestsDescription: What drives my curiosity.
 
 techStack:
   # --- LANGUAGES ---
