--- a/src/content/index-page/id/index.mdx
+++ b/src/content/index-page/id/index.mdx
@@ -2,6 +2,9 @@
 title: Konten Halaman Indeks
 order: 1
 headline: Hai, saya Anjasfedo. Saya menciptakan pengalaman digital yang menggabungkan desain dengan teknologi.
+heroSubtitle: Saya spesialis dalam
+viewMyWorkText: Lihat Karya Saya
+getInTouchText: Hubungi Saya
 
 roles:
   - label: Full-Stack Developer
@@ -42,6 +45,18 @@ education:
     year: 2018 - 2021
     logo: https://api.dicebear.com/7.x/identicon/svg?seed=SMAN1
     details: Pondasi sekolah menengah dengan fokus pada sains dan berpikir analitis.
+
+identityGridTitle: Identitas & Keahlian
+techStackTitle: Tech Stack
+techStackDescription: Teknologi yang saya gunakan untuk membangun produk yang skalabel.
+locationTitle: Lokasi
+locationDescription: Indonesia, Bengkulu.
+connectTitle: Terhubung
+connectDescription: Mari bangun sesuatu bersama.
+educationTitle: Pendidikan
+educationDescription: Perjalanan akademis saya.
+interestsTitle: Minat
+interestsDescription: Apa yang menggerakkan rasa ingin tahu saya.
 
 techStack:
   # --- BAHASA ---
