feat: project & certificate lang content

--- a/src/content/index-page/en/index.mdx
+++ b/src/content/index-page/en/index.mdx
@@ -248,22 +248,22 @@ location:
 connect:
   - id: 1
     name: GitHub
-    designation: Open Source
+    designation: Anjasfedo
     icon: IconBrandGithub
     url: https://github.com/anjasfedo
   - id: 2
     name: LinkedIn
-    designation: Professional
+    designation: M. Anjasfedo Afridiansah
     icon: IconBrandLinkedin
     url: https://linkedin.com/in/m-anjasfedo-afridiansah
   - id: 3
     name: Instagram
-    designation: Personal & Creative
+    designation: anjas_fedo
     icon: IconBrandInstagram
     url: https://www.instagram.com/anjas_fedo/
   - id: 4
     name: Gmail
-    designation: Direct Inquiry
+    designation: fedoafridiansah@gmail.com
     icon: IconMail
     url: mailto:fedoafridiansah@gmail.com
 
