--- a/src/content/uses-page/en/index.mdx
+++ b/src/content/uses-page/en/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Uses Page
+title: Uses
 order: 1
 description: This is a overview of my hardware and software setup that I use daily for development, design, and productivity. Tools that help me build things efficiently.
 
