--- a/src/content/uses-page/id/index.mdx
+++ b/src/content/uses-page/id/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Halaman Penggunaan
+title: Penggunaan
 order: 1
 description: Ini adalah gambaran umum tentang perangkat keras dan perangkat lunak yang saya gunakan sehari-hari untuk pengembangan, desain, dan produktivitas. Alat yang membantu saya membangun sesuatu dengan efisien.
 
