Refactor and enhance various components and pages
- Updated the description text on the Certificates Page for clarity.
- Added a Download CV section to the Experience Timeline with animations and tooltips.
- Enhanced the Hero component with improved button animations and z-index adjustments.
- Adjusted z-index for Identity Grid to ensure proper layering.
- Modified Projects Page layout to include a max-width constraint.
- Improved Theme Language Toggle with tooltips for better user experience.
- Refined Timeline component styles for better spacing and layout.
- Updated content configuration to include CV-related fields.
- Revised content for Certificates Page in both English and Indonesian.
- Enhanced Index Page content with updated headlines and CV information.
- Updated Privacy, Projects, Terms, and Uses pages with SEO configurations.
- Improved slug-based project pages with dynamic SEO metadata.

--- a/src/content/certificates-page/en/index.mdx
+++ b/src/content/certificates-page/en/index.mdx
@@ -2,7 +2,7 @@
 title: Certificates Page Content
 order: 1
 pageTitle: Expertise Certified
-pageDescription: Verifiable credentials from global institutions in Machine Learning and Software Engineering.
+pageDescription: Verifiable credentials in Machine Learning and Software Engineering.
 searchPlaceholder: Search by title, issuer, or skill...
 resetFiltersText: Reset Filters
 issuerLabel: Issuer
