--- a/src/content/index-page/en/index.mdx
+++ b/src/content/index-page/en/index.mdx
@@ -1,22 +1,27 @@
 ---
 title: Index Page Content
 order: 1
-headline: Hi, I'm Anjasfedo. I craft digital experiences that merge design with technology.
+headline: Hi, I'm Anjasfedo. A Software Engineer focused on building scalable, efficient system solutions that are ready to meet the challenges of the future industry.
 heroSubtitle: I specialize in
 viewMyWorkText: View My Work
 getInTouchText: Get In Touch
+cvButtonText: Download CV
+cvButtonUrl: /M-Anjasfedo-Afridiansah-CV.pdf
+cvDescription: Interested in working together? Download my CV to learn more about my experience and skills.
 
 roles:
+  - label: Software Engineer
+    description: Building efficient software systems with clean, structured, and maintainable code.
   - label: Full-Stack Developer
-    description: Bridging complex backends with beautiful frontends using Laravel & React.
+    description: Bridging complex backends with beautiful frontends.
   - label: Backend Engineer
     description: Architecting scalable APIs and optimizing database performance.
   - label: Frontend Developer
-    description: Crafting pixel-perfect, responsive user interfaces with Tailwind & Astro.
+    description: Crafting pixel-perfect, responsive user interfaces.
   - label: Mobile Developer
-    description: Building cross-platform apps that feel native using React Native.
+    description: Engineering scalable cross-platform apps for iOS and Android focused on performance.
   - label: Cloud Computing Enthusiast
-    description: Designing scalable cloud architectures and optimizing serverless workflows.
+    description: Designing scalable cloud architectures and optimizing workflows.
   - label: Machine Learning Enthusiast
     description: Developing predictive models and integrating AI capabilities into applications.
 
