--- a/src/content/index-page/id/index.mdx
+++ b/src/content/index-page/id/index.mdx
@@ -1,24 +1,29 @@
 ---
 title: Konten Halaman Indeks
 order: 1
-headline: Hai, saya Anjasfedo. Saya menciptakan pengalaman digital yang menggabungkan desain dengan teknologi.
+headline: Hai, saya Anjasfedo. Seorang Software Engineer yang berfokus pada pembangunan solusi sistem yang skalabel, efisien, dan siap menghadapi tantangan industri masa depan.
 heroSubtitle: Saya spesialis dalam
 viewMyWorkText: Lihat Karya Saya
 getInTouchText: Hubungi Saya
+cvButtonText: Unduh CV
+cvButtonUrl: /M-Anjasfedo-Afridiansah-CV.pdf
+cvDescription: Tertarik untuk bekerja sama? Unduh CV saya untuk mempelajari lebih lanjut tentang pengalaman dan keahlian saya.
 
 roles:
+  - label: Software Engineer
+    description: Membangun sistem perangkat lunak yang efisien dengan kode yang bersih dan terstruktur.
   - label: Full-Stack Developer
-    description: Menghubungkan backend kompleks dengan frontend yang indah menggunakan Laravel & React.
+    description: Menghubungkan backend kompleks dengan frontend yang indah.
   - label: Backend Engineer
     description: Merancang API yang skalabel dan mengoptimalkan performa database.
   - label: Frontend Developer
-    description: Membuat antarmuka pengguna yang responsif dan presisi dengan Tailwind & Astro.
+    description: Membuat antarmuka pengguna yang responsif dan presisi.
   - label: Mobile Developer
-    description: Membangun aplikasi lintas platform yang terasa native menggunakan React Native.
-  - label: Penggemar Cloud Computing
-    description: Merancang arsitektur cloud yang skalabel dan mengoptimalkan alur kerja serverless.
-  - label: Penggemar Machine Learning
-    description: Mengembangkan model prediktif dan mengintegrasikan kemampuan AI ke dalam aplikasi.
+    description: Membangun aplikasi lintas platform untuk iOS dan Android dengan fokus pada performa.
+  - label: Cloud Computing Enthusiast
+    description: Merancang arsitektur cloud yang skalabel dan mengoptimalkan alur kerja.
+  - label: Machine Learning Enthusiast
+    description: Mengembangkan model prediktif dan mengintegrasikan AI ke dalam aplikasi.
 
 education:
   - id: 1
