--- a/src/content/certificates-page/id/index.mdx
+++ b/src/content/certificates-page/id/index.mdx
@@ -2,7 +2,7 @@
 title: Konten Halaman Sertifikat
 order: 1
 pageTitle: Keahlian Tersertifikasi
-pageDescription: Kredensial terverifikasi dari institusi global di Machine Learning dan Rekayasa Perangkat Lunak.
+pageDescription: Kredensial terverifikasi di Machine Learning dan Rekayasa Perangkat Lunak.
 searchPlaceholder: Cari berdasarkan judul, penerbit, atau keahlian...
 resetFiltersText: Reset Filter
 issuerLabel: Penerbit
